  * prepare-release:
    - add as a small script to lazy check and prepare releases
  * doc/*:
    - move the command synopsis out of each manpage into apt-verbatim.ent
      as they are a hell to translate and just single out the parameters
      which can be translated to apt.ent
  * apt-pkg/aptconfiguration.cc:
    - if present, prefer xz binary over lzma

  [ Bogdan Purcareata ]
  * doc/apt-get.8.xml:
    - add 'download' to the usage line (Closes: #649340)
  * cmdline/apt-get.cc:
    - distinguish information about 'apt-get autoremove' based on the
      number of auto-removed packages both before and after the list
      of packages (Closes: #665833)

 -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 05 Apr 2012 18:39:51 +0200

apt (0.8.16~exp13) experimental; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/acquire-item.cc:
    - remove 'old' InRelease file if we can't get a new one before
      proceeding with Release.gpg to avoid the false impression of a still
      trusted repository by a (still present) old InRelease file.
      Thanks to Simon Ruderich for reporting this issue! (CVE-2012-0214)
    - add Debug::pkgAcqArchive::NoQueue to disable package downloading
  * apt-pkg/deb/dpkgpm.cc:
    - chroot if needed before dpkg --assert-multi-arch
    - ensure that dpkg binary doesn't have the chroot-directory prefixed
    - call dpkg --assert-multi-arch with execvp instead of execv
    - save the universe by not printing messages about apport if a package
      with this name is not installed (Closes: #619646)
    - handle a SIGINT in all modes as a break after the currently running
      dpkg transaction instead of ignoring it completely
  * apt-pkg/depcache.cc:
    - if a M-A:same package is marked for reinstall, mark all it's installed
      silbings for reinstallation as well (LP: #859188)
  * apt-pkg/contrib/configuration.cc:
    - do not stop parent transversal in FindDir if the value is empty
  * methods/http{s,}.cc: